added mariadb support

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,17 @@ body {
 a {
   color: #00B7FF;
 }
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.gallery .gallery-photo {
+  max-width: 30%;
+  min-width: 200px;
+}
+
+.gallery .gallery-photo img {
+  width: 100%;
+}
